<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_mis_peticiones">

    <fragment
        android:id="@+id/nav_mis_peticiones"
        android:name="com.glpi.glpi_ministerio_pblico.ui.misPeticiones.MisPeticionesFragment"
        android:label="@string/menu_mis_peticiones"
        tools:layout="@layout/fragment_mis_peticiones" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.glpi.glpi_ministerio_pblico.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.glpi.glpi_ministerio_pblico.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.glpi.glpi_ministerio_pblico.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>