<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Soporte"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mis_peticiones"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mis_peticiones" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item android:title="Opciones"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mis_ajustes"
            android:icon="@drawable/ic_menu_camera"
            android:title="Ajustes" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Cerrar Sesión" />
    </group>

</menu>