<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/esq_redondeada_blanco"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_estadoColor"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@drawable/esq_redondeada_amarillo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="5sp"
                android:paddingBottom="5sp">

                <TextView
                    android:id="@+id/txt_numero_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#3FC3FF"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:gravity="center"
                    android:text="#123456"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewxxx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#7DB342"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:gravity="center"
                    android:text="TTR"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:gravity="center"
                    android:text="@string/fragment_mispet_tipo"
                    android:textColor="#3FC3FF"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_estado_ticket"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:visibility="gone"
                    app:buttonTint="#49bf4d" />
                <!--                app:buttonTint="#49bf4d"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_descripcionTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:text="@string/fragment_mispet_desc"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_requester_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:text="@string/fragment_mispet_user"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_requester_apellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:gravity="start"
                    android:text="@string/fragment_mispet_user"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_requester_cargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:text="@string/fragment_mispet_cat"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#E0E0E0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_fecha_apertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_sans_libre_light"
                    android:text="@string/fragment_mispet_fecha"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>